--- a/waybar/style.css
+++ b/waybar/style.css
@@ -21,8 +21,8 @@
 }
 
 #waybar {
-    font-family: 'Iosevka Extended';
-    font-size: 1.2em;
+    font-family: 'Jetbrains Mono';
+    font-size: 1.1em;
     font-weight: 400;
     color: @base04;
     background: @base01;
