--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,19 +1,21 @@
-@define-color base00 #181818;
-@define-color base01 #161821;
-@define-color base02 #1e2132;
-@define-color base03 #585858;
-@define-color base04 #c6c8d1;
-@define-color base05 #c6c8d1;
-@define-color base06 #e8e8e8;
-@define-color base07 #f8f8f8;
-@define-color base08 #ab4642;
-@define-color base09 #dc9656;
-@define-color base0A #f7ca88;
-@define-color base0B #a1b56c;
-@define-color base0C #86c1b9;
-@define-color base0D #7cafc2;
-@define-color base0E #ba8baf;
-@define-color base0F #e27878;
+@define-color base00 #1e2132;
+@define-color base01 #e27878;
+@define-color base02 #b4be82;
+@define-color base03 #e2a478;
+@define-color base04 #84a0c6;
+@define-color base05 #a093c7;
+@define-color base06 #89b8c2;
+@define-color base07 #c6c8d1;
+@define-color base08 #6b7089;
+@define-color base09 #e98989;
+@define-color base0A #c0ca8e;
+@define-color base0B #e9b189;
+@define-color base0C #91acd1;
+@define-color base0D #ada0d3;
+@define-color base0E #95c4ce;
+@define-color base0F #d2d4de;
+@define-color basebg #161821;
+@define-color basefg #c6c8d1;
 
 * {
     transition: none;
@@ -22,10 +24,8 @@
 
 #waybar {
     font-family: 'Jetbrains Mono';
-    font-size: 1.1em;
-    font-weight: 400;
-    color: @base04;
-    background: @base01;
+    color: @base0C;
+    background: @basebg;
 }
 
 #workspaces {
@@ -34,51 +34,54 @@
 
 #workspaces button {
     margin: 4px 0;
-    padding: 0 4px;
-    color: @base05;
+    padding: 0 2px;
+    color: @base04;
 }
 
 #workspaces button.visible {
 }
 
 #workspaces button.active {
-    border-radius: 4px;
-    background-color: #6b7089;
+    border-radius: 1px;
+    background-color: @base05;
+    color: @base00;
 }
 
 #workspaces button.urgent {
-    color: rgba(238, 46, 36, 1);
+    background-color: @base01;
+    color: @basebg;
 }
 
 #tray {
     margin: 4px 4px 4px 4px;
     border-radius: 4px;
-    background-color: @base02;
+    background-color: @basebg;
 }
 
 #tray * {
     padding: 0 6px;
-    border-left: 1px solid @base00;
+    border-left: 1px solid @base05;
 }
 
 #tray *:first-child {
     border-left: none;
 }
 
-#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-updates, #custom-weather, #custom-mail, #clock, #temperature {
+#mode, #cpu, #memory, #network, #pulseaudio, #clock, #temperature {
     margin: 4px 2px;
     padding: 0 6px;
-    background-color: @base02;
+    background-color: @base00;
+    color: @base08;
     border-radius: 4px;
     min-width: 20px;
 }
 
 #pulseaudio.muted {
-    color: @base0F;
+    color: @base08;
 }
 
 #pulseaudio.bluetooth {
-    color: @base0C;
+    color: @base06;
 }
 
 #clock {
@@ -88,11 +91,10 @@
 }
 
 #temperature.critical {
-    color: @base0F;
+    color: @basebg;
+    background-color: @base01;
 }
 
 #window {
-    font-size: 0.9em;
-    font-weight: 400;
-    font-family: "Iosevka Extended";
+    font-family: "JetBrains Mono";
 }
